--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
         </div>
         <div id='audio' style='display: none;'></div>
         <div id='buttons'>
+          <a data-soundfile='hey'>Hey</a>
           <a data-soundfile='dank'>Dank</a>
         </div>
         <div id='preload'>
+          <audio autobuffer='true' preload='auto' src='./sounds/hey.mp3'></audio>
           <audio autobuffer='true' preload='auto' src='./sounds/dank.mp3'></audio>
         </div>
         <footer></footer>
