--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <audio autobuffer='true' preload='auto' src='./sounds/dank.mp3'></audio>
         </div>
         <footer></footer>
-        <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js'></script>
+        <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js'></script>
         <script>
           !window.jQuery && document.write('<script src="./js/vendor/jquery-1.4.2.min.js"><\/script>');
         </script>
@@ -42,7 +42,7 @@
           var _gaq = [['_setAccount', 'UA-228926-7'], ['_trackPageview']];
           (function(d, t) {
           var g = d.createElement(t), s = d.getElementsByTagName(t)[0];
-          g.async = true; g.src = 'http://www.google-analytics.com/ga.js'; s.parentNode.insertBefore(g, s);
+          g.async = true; g.src = 'https://www.google-analytics.com/ga.js'; s.parentNode.insertBefore(g, s);
           })(document, 'script');
         </script>
       </div>
