--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
           <a data-soundfile='hey'>Hey</a>
           <a data-soundfile='dank'>Dank</a>
           <a data-soundfile='reallly-easy'>Reallly Easy</a>
+          <a data-soundfile='foxxxy'>Foxxxy</a>
         </div>
         <div id='preload'>
           <audio autobuffer='true' preload='auto' src='./sounds/hey.mp3'></audio>
           <audio autobuffer='true' preload='auto' src='./sounds/dank.mp3'></audio>
           <audio autobuffer='true' preload='auto' src='./sounds/reallly-easy.mp3'></audio>
+          <audio autobuffer='true' preload='auto' src='./sounds/foxxxy.mp3'></audio>
         </div>
         <footer></footer>
         <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js'></script>
