--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           <a data-soundfile='reallly-easy'>Reallly Easy</a>
           <a data-soundfile='foxxxy'>Foxxxy</a>
           <a data-soundfile='22'>22</a>
+          <a data-soundfile='diffie'>Mah Boy Diffie</a>
         </div>
         <div id='preload'>
           <audio autobuffer='true' preload='auto' src='./sounds/hey.mp3'></audio>
@@ -35,6 +36,7 @@
           <audio autobuffer='true' preload='auto' src='./sounds/reallly-easy.mp3'></audio>
           <audio autobuffer='true' preload='auto' src='./sounds/foxxxy.mp3'></audio>
           <audio autobuffer='true' preload='auto' src='./sounds/22.mp3'></audio>
+          <audio autobuffer='true' preload='auto' src='./sounds/diffie.mp3'></audio>
         </div>
         <footer></footer>
         <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js'></script>
